fix(exp): `text-wrap: balance`

--- a/src/global.css
+++ b/src/global.css
@@ -156,6 +156,11 @@ a {
   display: none;
 }
 
+.text-center {
+  /* Experimental 🤞 */
+  text-wrap: balance;
+}
+
 .pill-input:checked + .pill-label {
   @apply border-black bg-black text-white;
 }
